==> MissouriMRDT/BMS_Software/libraries/RoveBoard/tm4c1294ncpdt_API/RoveUart/HardwareSerial.cpp <==
#include <stdlib.h>
#include <stdio.h>
#include <string.h>
#include <inttypes.h>
#include "../Clocking/Clocking_TivaTM4C1294NCPDT.h"
#include "HardwareSerial.h"
#include "../RovePinMap_TivaTM4C1294NCPDT.h"
#include "../tivaware/inc/hw_memmap.h"
#include "../tivaware/inc/hw_types.h"
#include "../tivaware/inc/hw_ints.h"
#include "../tivaware/inc/hw_uart.h"
#include "../tivaware/driverlib/gpio.h"
#include "../tivaware/driverlib/debug.h"
#include "../tivaware/driverlib/interrupt.h"
#include "../tivaware/driverlib/rom.h"
#include "../tivaware/driverlib/rom_map.h"
#include "../tivaware/driverlib/pin_map.h"
#include "../tivaware/driverlib/sysctl.h"
#include "../tivaware/driverlib/uart.h"
#define TX_BUFFER_EMPTY    (txReadIndex == txWriteIndex)
#define TX_BUFFER_FULL     (((txWriteIndex + 1) % txBufferSize) == txReadIndex)
#define RX_BUFFER_EMPTY    (rxReadIndex == rxWriteIndex)
#define RX_BUFFER_FULL     (((rxWriteIndex + 1) % rxBufferSize) == rxReadIndex)
#define UART_BASE g_ulUARTBase[uartModule]

void
HardwareSerial::primeTransmit(unsigned long ulBase)
{
    //
    // Do we have any data to transmit?
    //
    if(!TX_BUFFER_EMPTY)
    {
        //
        // Disable the UART interrupt. If we don't do this there is a race
        // condition which can cause the read index to be corrupted.
        //
        IntDisable(g_ulUARTInt[uartModule]);
        //
        // Yes - take some characters out of the transmit buffer and feed
        // them to the UART transmit FIFO.
        //
        while(!TX_BUFFER_EMPTY)
        {
            while(UARTSpaceAvail(ulBase) && !TX_BUFFER_EMPTY){
                UARTCharPutNonBlocking(ulBase,
                                       txBuffer[txReadIndex]);

                txReadIndex = (txReadIndex + 1) % txBufferSize;
            }
        }

        //
        // Reenable the UART interrupt.
        //
        IntEnable(g_ulUARTInt[uartModule]);
    }
}

void HardwareSerial::setOutputSettings(uint8_t paritySettings, uint8_t stopBitSettings, uint8_t wordLengthSettings)
{
	uint32_t wordLength, stopBits, parityBits;
	switch(paritySettings)
	{
		case NoParity:
			parityBits = UART_CONFIG_PAR_NONE;
			break;

		case EvenParity:
			parityBits = UART_CONFIG_PAR_EVEN;
			break;

		case OddParity:
			parityBits = UART_CONFIG_PAR_ODD;
			break;

		case AlwaysZero:
			parityBits = UART_CONFIG_PAR_ZERO;
			break;

		case AlwaysOne:
			parityBits = UART_CONFIG_PAR_ONE;
			break;

		default:
			return;
	}

	switch(stopBitSettings)
	{
		case OneStopBit:
			stopBits = UART_CONFIG_STOP_ONE;
			break;

		case TwoStopBit:
			stopBits = UART_CONFIG_STOP_TWO;
			break;

		default:
			return;
	}

	switch(wordLengthSettings)
	{
		case WordLength8:
			wordLength = UART_CONFIG_WLEN_8;
			break;

		case WordLength7:
			wordLength = UART_CONFIG_WLEN_7;
			break;

		case WordLength6:
			wordLength = UART_CONFIG_WLEN_6;
			break;

		case WordLength5:
			wordLength = UART_CONFIG_WLEN_5;
			break;

		default:
			return;
	}

	//function call automatically stops uart for configuration
	UARTConfigSetExpClk(UART_BASE, getCpuClockFreq(), baudRate, (wordLength | parityBits |stopBits));
}

void
HardwareSerial::begin(unsigned long baud, unsigned int rxPin, unsigned int txPin)
{
	baudRate = baud;

  //
  // Initialize the UART.
  //
  SysCtlPeripheralEnable(g_ulUARTPeriph[uartModule]);

  GPIOPinConfigure(g_ulUARTConfig[txPin]);
  GPIOPinConfigure(g_ulUARTConfig[rxPin]);

  GPIOPinTypeUART(portRefToPortBase[pinToPortRef[txPin]], pinToPinMask[txPin] | pinToPinMask[rxPin]);

  UARTConfigSetExpClk(UART_BASE, getCpuClockFreq(), baudRate,
                          (UART_CONFIG_PAR_NONE | UART_CONFIG_STOP_ONE |
                           UART_CONFIG_WLEN_8));

  switch(UART_BASE)
  {
    case UART0_BASE:
      UARTIntRegister(UART_BASE, UARTIntHandler0);
    break;

    case UART1_BASE:
    UARTIntRegister(UART_BASE, UARTIntHandler1);
    break;

    case UART2_BASE:
    UARTIntRegister(UART_BASE, UARTIntHandler2);
    break;

    case UART3_BASE:
    UARTIntRegister(UART_BASE, UARTIntHandler3);
    break;

    case UART4_BASE:
    UARTIntRegister(UART_BASE, UARTIntHandler4);
    break;

    case UART5_BASE:
    UARTIntRegister(UART_BASE, UARTIntHandler5);
    break;

    case UART6_BASE:
    UARTIntRegister(UART_BASE, UARTIntHandler6);
    break;

    case UART7_BASE:
    UARTIntRegister(UART_BASE, UARTIntHandler7);
    break;
  }

  //
  // Set the UART to interrupt whenever a byte is transmitted or received
  //
  UARTFIFOLevelSet(UART_BASE, UART_FIFO_TX1_8, UART_FIFO_RX1_8);
  flushAll();
  UARTIntDisable(UART_BASE, 0xFFFFFFFF);
  UARTIntEnable(UART_BASE, UART_INT_RX | UART_INT_RT);
  IntEnable(g_ulUARTInt[uartModule]);

  //
  // Enable the UART operation.
  //
  UARTEnable(UART_BASE);

  if (txBuffer != (unsigned char *)0xFFFFFFFF)  // Catch attempts to re-init this Serial instance by freeing old buffer first
    delete txBuffer;
  if (rxBuffer != (unsigned char *)0xFFFFFFFF)  // Catch attempts to re-init this Serial instance by freeing old buffer first
    delete rxBuffer;
  txBuffer = new unsigned char [txBufferSize];
  rxBuffer = new unsigned char [rxBufferSize];

  SysCtlDelay(100);
}

void
HardwareSerial::setBufferSize(unsigned long buffSize)
{
  if(buffSize == 0)
  {
    return;
  }

  unsigned char* oldRxBuffer = rxBuffer;
  unsigned char* oldTxBuffer = txBuffer;
  unsigned long oldBuffSize = txBufferSize;

  IntDisable(g_ulUARTInt[uartModule]);

  txBuffer = new unsigned char [buffSize];
  rxBuffer = new unsigned char [buffSize];

  unsigned long i;
  for(i = 0; i < oldBuffSize; i++)
  {
    if(i >= buffSize)
    {
      break;
    }

    rxBuffer[i] = oldRxBuffer[i];
    txBuffer[i] = oldTxBuffer[i];
  }

  txBufferSize = buffSize;
  rxBufferSize = buffSize;
  delete oldRxBuffer;
  delete oldTxBuffer;

  IntEnable(g_ulUARTInt[uartModule]);
}

void HardwareSerial::end()
{
    unsigned long ulInt = IntMasterDisable();

	flushAll();

    //
    // If interrupts were enabled when we turned them off, turn them
    // back on again.
    //
    if(!ulInt)
    {
        IntMasterEnable();
    }

    IntDisable(g_ulUARTInt[uartModule]);
    UARTIntDisable(UART_BASE, UART_INT_RX | UART_INT_RT);
}

void HardwareSerial::UARTIntHandler(void){
    unsigned long ulInts;
    long lChar;
    // Get and clear the current interrupt source(s)
    //
    ulInts = UARTIntStatus(UART_BASE, true);
    UARTIntClear(UART_BASE, ulInts);

    // Are we being interrupted because the TX FIFO has space available?
    //
    if(ulInts & UART_INT_TX)
    {
        //
        // Move as many bytes as we can into the transmit FIFO.
        //
        primeTransmit(UART_BASE);

        //
        // If the output buffer is empty, turn off the transmit interrupt. Run any user transmit callbacks
        //
        if(TX_BUFFER_EMPTY)
        {
            UARTIntDisable(UART_BASE, UART_INT_TX);
            uint8_t i;
            for(i = 0; i < MaxCallbacks; i++)
            {
              if(transmitCbFuncs[i])
              {
                transmitCbFuncs[i](uartModule);
              }
            }
        }
    }
    if(ulInts & (UART_INT_RX | UART_INT_RT))
    {
        while(UARTCharsAvail(UART_BASE))
        {

            //
            // Read a character
            //
            lChar = UARTCharGetNonBlocking(UART_BASE);
            //
            // If there is space in the receive buffer, put the character
            // there, otherwise throw it away.
            //
            uint8_t volatile full = RX_BUFFER_FULL;
            if(full) break;

            rxBuffer[rxWriteIndex] =
                (unsigned char)(lChar & 0xFF);
            rxWriteIndex = ((rxWriteIndex) + 1) % rxBufferSize;

            //
            // call user receive callbacks
            //
            uint8_t i;
            for(i = 0; i < MaxCallbacks; i++)
            {
              if(receiveCbFuncs[i])
              {
                receiveCbFuncs[i](uartModule);
              }
            }

        }
        primeTransmit(UART_BASE);
        UARTIntEnable(UART_BASE, UART_INT_TX);
    }
}
